--- a/.github/workflows/pullRequest.yaml
+++ b/.github/workflows/pullRequest.yaml
@@ -56,7 +56,7 @@ jobs:
               uses: thollander/actions-comment-pull-request@v1
               if: steps.convertOutput.outputs.performance >= 70
               with:
-                  message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.convertOutput.outputs.performance }}. Great job 💪! \n\n So that we can [recognize your solution for the coding challenge](https://github.com/SAP-samples/devtoberfest-2021/blob/main/topics/Week6_Frontend/README.md#coding-challenge), please tell us your SAP Community profile URL in a reply to this comment; don't include any other text, just the URL on its own, like this:\n\nhttps://people.sap.com/your-user-name\n\nThanks!"
+                  message: "Congrats 🥳, your web app achieved a performace score of ${{ steps.convertOutput.outputs.performance }}. Great job 💪! Thanks!"
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Comment PR
